# MAT

./: .gitignore  README.md  prd.json  progress.txt  pyproject.toml  ralph.sh
agents/: __init__.py  architect.py  base.py  developer.py  pm.py  qa.py  scrum_master.py  ux.py
cli/: __init__.py  main.py
config/: __init__.py  settings.py
examples/todo-app/: PROJECT-SPEC.md  RESULTS.md  prd.json
examples/todo-app/tasks/: prd.md
llm/: __init__.py  client.py
orchestrator/: __init__.py  coordinator.py  scale_adapter.py
ralph/: __init__.py  build_loop.py
tasks/: prd.md
utils/: __init__.py  file_ops.py  git_ops.py  logger.py
workflows/: __init__.py  edge_cases.py  prd_generator.py  prd_to_json.py  story_quality.py
